compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__imports__using_private_constructor_pattern.snap
---
source: compiler-core/src/type_/tests/imports.rs
assertion_line: 43
expression: "import one\n\npub fn main(x) {\n  let one.Two = x\n}"
---
error: Unknown module field
  ┌─ /src/one/two.gleam:4:7
  │
4 │   let one.Two = x
  │       ^^^^^^^ Did you mean `Two`?

The module `one` does not have a `Two` field.

